[package]
name = "stm32f401_embassy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-stm32 = { version = "0.1.0", features = ["defmt","stm32f401re", "time-driver-tim3"] }
embassy-executor = { version = "0.5.0", features = ["defmt", "integrated-timers", "arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.3.0", features = ["defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }


[patch.crates-io]
embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "4a4b8c9b8de8eaf874372f6239dc1a220f172318"}
embassy-executor = {git = "https://github.com/embassy-rs/embassy", rev = "4a4b8c9b8de8eaf874372f6239dc1a220f172318"}
embassy-time = {git = "https://github.com/embassy-rs/embassy", rev = "4a4b8c9b8de8eaf874372f6239dc1a220f172318"}


[profile.release]
debug = 2
