[package]
name = "stm32f401_embassy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-stm32 = { version = "0.1.0", features = ["defmt","stm32f401re", "time-driver-tim3"] }
embassy-executor = { version = "0.5.0", features = ["defmt", "integrated-timers", "arch-cortex-m", "executor-thread","task-arena-size-1024"] }
embassy-time = { version = "0.3.0", features = ["tick-hz-100_000","defmt"] }
stm32-metapac = { git = "https://github.com/embassy-rs/stm32-data-generated", tag = "stm32-data-59b1f65bd109c3ef35782e6c44062208d0ef3d0e",features = ["stm32f401re"] }
embassy-hal-internal = {version = "0.1.0", features = ["cortex-m", "prio-bits-4"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
critical-section = "1.1"
static_cell = "2"


[patch.crates-io]
embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "4a4b8c9b8de8eaf874372f6239dc1a220f172318"}
embassy-executor = {git = "https://github.com/embassy-rs/embassy", rev = "4a4b8c9b8de8eaf874372f6239dc1a220f172318"}
embassy-time = {git = "https://github.com/embassy-rs/embassy", rev = "4a4b8c9b8de8eaf874372f6239dc1a220f172318"}
embassy-hal-internal =  {git = "https://github.com/embassy-rs/embassy", rev = "4a4b8c9b8de8eaf874372f6239dc1a220f172318"}

[profile.release]
opt-level = 0
debug = 2

[features]
default = ["stride"]
stride = []

# to build the asm
# [build-dependencies]
# cc = "1.0"